fix(article-horizontal-scroll): add overflow-wrap anywhere

--- a/components/chains/article-body/default.scss
+++ b/components/chains/article-body/default.scss
@@ -1,5 +1,6 @@
 .b-article-body {
   font-family: 'Open Sans', sans-serif !important;
+  overflow-wrap: anywhere;
   & > div,
   & > figure {
     clear: left;
